--- a/app/src/main/res/layout/fragment_file_list.xml
+++ b/app/src/main/res/layout/fragment_file_list.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/board_list"
+        android:id="@+id/file_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
