--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -25,23 +25,47 @@
                 android:textSize="28sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
             <View
                 android:background="#000000"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"/>
+
             <TextView
                 android:id="@+id/link_text"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:textSize="20sp"
                 android:text="https://www.developer.android.com"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/place_text"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="20sp"
+                android:text="Oficinas de google"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/date_text"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:textSize="20sp"
+                android:text="2016-04-09"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
             <View
                 android:background="#000000"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"/>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/skill_list"
                 android:layout_width="match_parent"
